--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,11 +76,7 @@ repos:
   - id: mypy
     files: src
     args: []
-
-- repo: https://github.com/codespell-project/codespell
-  rev: v2.1.0
-  hooks:
-  - id: codespell
+    additional_dependencies: [types-all]
 
 - repo: https://github.com/shellcheck-py/shellcheck-py
   rev: v0.8.0.4
