--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ strict = true
 show_error_codes = true
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 warn_unreachable = true
+ignore_missing_imports = true
 
 
 [tool.check-manifest]
