--- a/setup.cfg
+++ b/setup.cfg
@@ -4,10 +4,7 @@ description = Simple auto-grid pyplot util.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/phinate/plothelp
-author = Nathan 
-author_email = me@email.com
-maintainer = The Scikit-HEP admins
-maintainer_email = scikit-hep-admins@googlegroups.com
+author = Nathan
 license = BSD-3-Clause
 license_file = LICENSE
 platforms =
@@ -35,6 +32,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    matplotlib
     typing-extensions>=3.7;python_version<'3.8'
 python_requires = >=3.7
 include_package_data = True
