--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ write_to = "src/plothelp/_version.py"
 minversion = "6.0"
 addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
 xfail_strict = true
-filterwarnings = ["error"]
+filterwarnings = ["error", "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning"]
 testpaths = [
     "tests",
 ]
