update dependecies with jax

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    jax
+    jaxlib
     matplotlib
     typing-extensions>=3.7;python_version<'3.8'
 python_requires = >=3.7
